--- a/gb/19/7/10/n11376683.md
+++ b/gb/19/7/10/n11376683.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÁªºÏ¹úÑÝ½²ºó·µ¸Û ºÎÔÏÊ«IGÉ¹ÎÂÅ¯ÐÄÒâ¿¨</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1154572337-600x400.jpg" />
-<h6>ºÎÔÏÊ«7ÔÂ8ÈÕÔÚÁªºÏ¹úÑÝ½²Ö®Ç°½ÓÊÜ·¨ÐÂÉç²É·Ã×ÊÁÏÕÕ¡£(FABRICE COFFRINI/AFP/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è”åˆå›½æ¼”è®²åŽè¿”æ¸¯ ä½•éŸµè¯—IGæ™’æ¸©æš–å¿ƒæ„å¡</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1154572337-600x400.jpg" />
+<h6>ä½•éŸµè¯—7æœˆ8æ—¥åœ¨è”åˆå›½æ¼”è®²ä¹‹å‰æŽ¥å—æ³•æ–°ç¤¾é‡‡è®¿èµ„æ–™ç…§ã€‚(FABRICE COFFRINI/AFP/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ11ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÙ¡Òà¼Ó×ÛºÏ±¨µ¼£©Ïã¸Û¸èÊÖ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E4%BD%95%E9%9F%B5%E8%AF%97.md">ºÎÔÏÊ«</a>7ÔÂ8ÈÕÓ¦Ñûµ½ÈðÊ¿ÈÕÄÚÍßÁªºÏ¹úÈËÈ¨ÀíÊÂ»á£¨United Nations Human Rights Council£¬¼ò³ÆUNHRC£©¾ÍÏã¸ÛÄ¿Ç°¡°<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md">·´ËÍÖÐ</a>¡±µÄ¾ÖÊÆ·¢±íÑÝ½²£¬¿ØËßÖÐ¹²¶ÔÏã¸Û×ÔÓÉÓëÃñÖ÷µÄÇÖÊ´ºÍÆÆ»µ¡£·ç³¾ÆÍÆÍµÄËý£¬10ÈÕÍíÆ½°²·µ»ØÏã¸Ûºó£¬ÔÚIGÉ¹³öÊÕµ½µÄÐÄÒâ¿¨Ê±±íÊ¾£º¡°À´»ØÁ½³Ì·É»ú¶¼µÃµ½ÎÞ±ÈÎÂÅ¯¡£¶àÐ»Á½×é»ú×éÈËÔ±ÓëÈÈÐÄÊÐÃñ£¡¡±</p>
-<p>½üÆÚÓë°ÙÍòÏã¸ÛÊÐÃñ²¢¼ç¡°<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md">·´ËÍÖÐ</a>¡±µÄ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E4%BD%95%E9%9F%B5%E8%AF%97.md">ºÎÔÏÊ«</a>£¬7ÔÂ8ÈÕÓ¦Ñûµ½ÈðÊ¿ÈÕÄÚÍßÁªºÏ¹úÈËÈ¨ÀíÊÂ»áÑÝ½²£¬ÈÃ¹ú¼ÊÉç»áÁË½â½üÆÚÏã¸ÛµÄ¾ÖÊÆ£¬ºôÓõÁªºÏ¹úÕÙ¿ª½ô¼±»áÒé±£»¤Ïã¸Û£¬½«ÖÐ¹²´ÓÁªºÏ¹úÈËÈ¨ÀíÊÂ»á³ýÃû¡£</p>
-<p>Ëý¶Ì¶Ì2·ÖÖÓµÄÑÝ½²£¬²»½ö±»ÖÐ¹²×¤ÁªºÏ¹ú´ú±íºáÂù´ò¶ÏÁ½´Î£¬¶øÇÒÈÇÀ´ÖÐ¹²Íâ½»²¿Ã¡ÂîËý¡°³ÕÐÄÍýÏë¡±¡¢¡°²»×ÔÁ¿Á¦¡±£¬Áî²»ÉÙÈË¶¼µ£ÐÄËýµÄÈËÉí°²È«¡£</p>
-<p>Ãæ¶ÔÖÐ¹²Íâ½»²¿µÄ°ÁÂýÓëÍþÐ²£¬ºÎÔÏÊ«ÔÚ·µ¸ÛÍ¾ÖÐ×«ÎÄ±íÊ¾£º¡°ÎÒÃÇÒªÇóµÄÆäÊµºÃ¼òµ¥ºÃÇåÎú£¬Ö»ÊÇ¡¶»ù±¾·¨¡·Í¬¡¶ÖÐÓ¢ÁªºÏÉùÃ÷¡·¸³ÓèÎÒÃÇµÄ×ÔÖÎÈ¨Àû¡£¡±</p>
-<p>¶ÔÓÚ±»ÖÐ¹²¹ÙÃ½¿ÚÖï±Ê·¥£¬ºÎÔÏÊ«ÔÚÏã¸Û»ú³¡ÊÜ·ÃÊ±±íÊ¾£º¡°Ã»Ïëµ½ÌÃÌÃµÄÒ»¸öÍâ½»²¿£¬¶ÔÎÒµÄ½²»°ÓÐÕâÃ´´óµÄ·´Ó¦¡£Õâ¾ÍÖ¤Ã÷£¬ËüµÄ·´Ó¦Ô½´ó£¬ÎÒÃÇ¾ÍÔ½ÓÐÁ¦Á¿¡£¡±</p>
-<p>ÓÉÓÚÁÖÖ£7ÔÂ9ÈÕÔÚ¼ÇÕß»áÉÏ³ÐÈÏ¡¶ÌÓ·¸ÌõÀý¡·£¨ÓÖ³Æ¡¶Òý¶ÉÌõÀý¡·»ò¡¶ËÍÖÐÌõÀý¡·£©µÄÐÞ¶©£¬ÒÑ¾­¡°ÍêÈ«Ê§°Ü¡±¡¢¡°ÊÙÖÕÕýÇÞ¡±£¬µ«Ã»ÓÐ±íÊ¾Òª³·»ØÐÞÀý£¬Òò´Ë£¬ÊÐÃñÈÏÎª±»ÖÐ¹²Ð®³ÖµÄÌØÊ×²»¿ÏÈÏ´í£¬ÒÀÈ»ÍæÎÄ×ÖÓÎÏ·¡£ºÎÔÏÊ«Ö±Ö¸£¬Ïã¸ÛÒªÊµÏÖÕæÆÕÑ¡£¬Õâ²»ÊÇÁÖÖ£ÓÃÒ»¶þ¸ö³ÉÓïÄÜ»Ø±ÜµÃÁËµÄÊÂÇé¡£</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ11æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…ä½Ÿäº¦åŠ ç»¼åˆæŠ¥å¯¼ï¼‰é¦™æ¸¯æ­Œæ‰‹<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E4%BD%95%E9%9F%B5%E8%AF%97.md#1">ä½•éŸµè¯—</a>7æœˆ8æ—¥åº”é‚€åˆ°ç‘žå£«æ—¥å†…ç“¦è”åˆå›½äººæƒç†äº‹ä¼šï¼ˆUnited Nations Human Rights Councilï¼Œç®€ç§°UNHRCï¼‰å°±é¦™æ¸¯ç›®å‰â€œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md#1">åé€ä¸­</a>â€çš„å±€åŠ¿å‘è¡¨æ¼”è®²ï¼ŒæŽ§è¯‰ä¸­å…±å¯¹é¦™æ¸¯è‡ªç”±ä¸Žæ°‘ä¸»çš„ä¾µèš€å’Œç ´åã€‚é£Žå°˜ä»†ä»†çš„å¥¹ï¼Œ10æ—¥æ™šå¹³å®‰è¿”å›žé¦™æ¸¯åŽï¼Œåœ¨IGæ™’å‡ºæ”¶åˆ°çš„å¿ƒæ„å¡æ—¶è¡¨ç¤ºï¼šâ€œæ¥å›žä¸¤ç¨‹é£žæœºéƒ½å¾—åˆ°æ— æ¯”æ¸©æš–ã€‚å¤šè°¢ä¸¤ç»„æœºç»„äººå‘˜ä¸Žçƒ­å¿ƒå¸‚æ°‘ï¼â€</p>
+<p>è¿‘æœŸä¸Žç™¾ä¸‡é¦™æ¸¯å¸‚æ°‘å¹¶è‚©â€œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md#1">åé€ä¸­</a>â€çš„<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E4%BD%95%E9%9F%B5%E8%AF%97.md#1">ä½•éŸµè¯—</a>ï¼Œ7æœˆ8æ—¥åº”é‚€åˆ°ç‘žå£«æ—¥å†…ç“¦è”åˆå›½äººæƒç†äº‹ä¼šæ¼”è®²ï¼Œè®©å›½é™…ç¤¾ä¼šäº†è§£è¿‘æœŸé¦™æ¸¯çš„å±€åŠ¿ï¼Œå‘¼åè”åˆå›½å¬å¼€ç´§æ€¥ä¼šè®®ä¿æŠ¤é¦™æ¸¯ï¼Œå°†ä¸­å…±ä»Žè”åˆå›½äººæƒç†äº‹ä¼šé™¤åã€‚</p>
+<p>å¥¹çŸ­çŸ­2åˆ†é’Ÿçš„æ¼”è®²ï¼Œä¸ä»…è¢«ä¸­å…±é©»è”åˆå›½ä»£è¡¨æ¨ªè›®æ‰“æ–­ä¸¤æ¬¡ï¼Œè€Œä¸”æƒ¹æ¥ä¸­å…±å¤–äº¤éƒ¨è°©éª‚å¥¹â€œç—´å¿ƒå¦„æƒ³â€ã€â€œä¸è‡ªé‡åŠ›â€ï¼Œä»¤ä¸å°‘äººéƒ½æ‹…å¿ƒå¥¹çš„äººèº«å®‰å…¨ã€‚</p>
+<p>é¢å¯¹ä¸­å…±å¤–äº¤éƒ¨çš„å‚²æ…¢ä¸Žå¨èƒï¼Œä½•éŸµè¯—åœ¨è¿”æ¸¯é€”ä¸­æ’°æ–‡è¡¨ç¤ºï¼šâ€œæˆ‘ä»¬è¦æ±‚çš„å…¶å®žå¥½ç®€å•å¥½æ¸…æ™°ï¼Œåªæ˜¯ã€ŠåŸºæœ¬æ³•ã€‹åŒã€Šä¸­è‹±è”åˆå£°æ˜Žã€‹èµ‹äºˆæˆ‘ä»¬çš„è‡ªæ²»æƒåˆ©ã€‚â€</p>
+<p>å¯¹äºŽè¢«ä¸­å…±å®˜åª’å£è¯›ç¬”ä¼ï¼Œä½•éŸµè¯—åœ¨é¦™æ¸¯æœºåœºå—è®¿æ—¶è¡¨ç¤ºï¼šâ€œæ²¡æƒ³åˆ°å ‚å ‚çš„ä¸€ä¸ªå¤–äº¤éƒ¨ï¼Œå¯¹æˆ‘çš„è®²è¯æœ‰è¿™ä¹ˆå¤§çš„ååº”ã€‚è¿™å°±è¯æ˜Žï¼Œå®ƒçš„ååº”è¶Šå¤§ï¼Œæˆ‘ä»¬å°±è¶Šæœ‰åŠ›é‡ã€‚â€</p>
+<p>ç”±äºŽæž—éƒ‘7æœˆ9æ—¥åœ¨è®°è€…ä¼šä¸Šæ‰¿è®¤ã€Šé€ƒçŠ¯æ¡ä¾‹ã€‹ï¼ˆåˆç§°ã€Šå¼•æ¸¡æ¡ä¾‹ã€‹æˆ–ã€Šé€ä¸­æ¡ä¾‹ã€‹ï¼‰çš„ä¿®è®¢ï¼Œå·²ç»â€œå®Œå…¨å¤±è´¥â€ã€â€œå¯¿ç»ˆæ­£å¯â€ï¼Œä½†æ²¡æœ‰è¡¨ç¤ºè¦æ’¤å›žä¿®ä¾‹ï¼Œå› æ­¤ï¼Œå¸‚æ°‘è®¤ä¸ºè¢«ä¸­å…±æŒŸæŒçš„ç‰¹é¦–ä¸è‚¯è®¤é”™ï¼Œä¾ç„¶çŽ©æ–‡å­—æ¸¸æˆã€‚ä½•éŸµè¯—ç›´æŒ‡ï¼Œé¦™æ¸¯è¦å®žçŽ°çœŸæ™®é€‰ï¼Œè¿™ä¸æ˜¯æž—éƒ‘ç”¨ä¸€äºŒä¸ªæˆè¯­èƒ½å›žé¿å¾—äº†çš„äº‹æƒ…ã€‚</p>
 <p>&nbsp;</p>
-<blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 450px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/BzvQmpEn4ot/" data-instgrm-version="12">
+<blockquote class=""></blockquote><img width="600" src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/ntdtv/ins.jpg" ><h3 align=center>(instagramè§†é¢‘æˆ–å›¾ç‰‡.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 450px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/BzvQmpEn4ot/" data-instgrm-version="12">
 <div style="padding: 16px;">
 <div style="display: flex; flex-direction: row; align-items: center;"></div>
 <div style="padding: 19% 0;"></div>
@@ -29,44 +29,48 @@
 </blockquote>
 <p><a async src="//www.instagram.com/embed.js"></a></p>
 <p>&nbsp;</p>
-<p>10ÈÕ°øÍí£¬ºÎÔÏÊ«°²È«·µ»ØÏã¸Ûºó¸üÐÂIG£¬É¹³öÊÕµ½µÄÐÄÒâ¿¨¡£¿¨µÄÉÏ¿îÊÇ¡°¸øÇ×°®µÄºÎCC¡±£¬ÄÚÈÝÓÉÖÁÉÙ7Ãû¡°ÓëÄã£¨°¢Ê«£©Í¬ÐÐµÄHONGKONGERS¡±µÄÃñÖÚÐ´µÀ£º¡°¸ÐÐ»ÄãÎªÏã¸Û×öµÄÒ»ÇÐ£¡ËäÈ»ÎÒÃÇÅ¼¶û¸Ðµ½Ê§ÍûºÍÎÞÁ¦£¬µ«ÄãÈÃÎÒ¿´µ½Ï£Íû£¡ÖÁÉÙÎÒÃÇÅ¬Á¦³¢ÊÔ¹ý£¬ÖÁÉÙÎÒÃÇ·ÜÁ¦ÕõÔú¹ý¡£¡±¡°ÕæµÄºÜ¸Ð¼¤ÄãÓÂ¸ÒµØÕ¾³öÀ´£¬ÎªÏã¸Û×öµÄÒ»ÇÐ£¬Ïã¸ÛÈËÒÔÄãÎªÈÙ¡£¡±</p>
-<p>ºÎÔÏÊ«ÔÚIGÐ´µÀ£º¡°À´»ØÁ½³Ì»ú¶¼µÃµ½ÎÞ±ÈÎÂÅ¯¡£¶àÐ»Á½×é»ú×éÈËÔ±Í¬ÂñÈÈÐÄÊÐÃñ£¡¡±²¢¸ÐÐ»Í¬»ú³Ë¿Í¶ÔËýµÄ¿ä½±£¬²¢ºôÓõ¡°Ò»ÆëÅ¬Á¦£¬Ïã¸ÛÈË£¡¡±ÓÐ²»ÉÙÍøÃñÁôÑÔ²¢±íÊ¾¸Ð¶¯£¬¸ÐÐ»ºÎÔÏÊ«ÎªÏã¸ÛÈËÓÂ¸Ò·¢Éù¡£#</p>
-<p>ÔðÈÎ±à¼­£ºÑîÃ÷</p>
+<p>10æ—¥å‚æ™šï¼Œä½•éŸµè¯—å®‰å…¨è¿”å›žé¦™æ¸¯åŽæ›´æ–°IGï¼Œæ™’å‡ºæ”¶åˆ°çš„å¿ƒæ„å¡ã€‚å¡çš„ä¸Šæ¬¾æ˜¯â€œç»™äº²çˆ±çš„ä½•CCâ€ï¼Œå†…å®¹ç”±è‡³å°‘7åâ€œä¸Žä½ ï¼ˆé˜¿è¯—ï¼‰åŒè¡Œçš„HONGKONGERSâ€çš„æ°‘ä¼—å†™é“ï¼šâ€œæ„Ÿè°¢ä½ ä¸ºé¦™æ¸¯åšçš„ä¸€åˆ‡ï¼è™½ç„¶æˆ‘ä»¬å¶å°”æ„Ÿåˆ°å¤±æœ›å’Œæ— åŠ›ï¼Œä½†ä½ è®©æˆ‘çœ‹åˆ°å¸Œæœ›ï¼è‡³å°‘æˆ‘ä»¬åŠªåŠ›å°è¯•è¿‡ï¼Œè‡³å°‘æˆ‘ä»¬å¥‹åŠ›æŒ£æ‰Žè¿‡ã€‚â€â€œçœŸçš„å¾ˆæ„Ÿæ¿€ä½ å‹‡æ•¢åœ°ç«™å‡ºæ¥ï¼Œä¸ºé¦™æ¸¯åšçš„ä¸€åˆ‡ï¼Œé¦™æ¸¯äººä»¥ä½ ä¸ºè£ã€‚â€</p>
+<p>ä½•éŸµè¯—åœ¨IGå†™é“ï¼šâ€œæ¥å›žä¸¤ç¨‹æœºéƒ½å¾—åˆ°æ— æ¯”æ¸©æš–ã€‚å¤šè°¢ä¸¤ç»„æœºç»„äººå‘˜åŒåŸ‹çƒ­å¿ƒå¸‚æ°‘ï¼â€å¹¶æ„Ÿè°¢åŒæœºä¹˜å®¢å¯¹å¥¹çš„å¤¸å¥–ï¼Œå¹¶å‘¼åâ€œä¸€é½åŠªåŠ›ï¼Œé¦™æ¸¯äººï¼â€æœ‰ä¸å°‘ç½‘æ°‘ç•™è¨€å¹¶è¡¨ç¤ºæ„ŸåŠ¨ï¼Œæ„Ÿè°¢ä½•éŸµè¯—ä¸ºé¦™æ¸¯äººå‹‡æ•¢å‘å£°ã€‚#</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¨æ˜Ž</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/10/n11376683.htm">ÁªºÏ¹úÑÝ½²ºó·µ¸Û ºÎÔÏÊ«IGÉ¹ÎÂÅ¯ÐÄÒâ¿¨</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11375081.htm">ºÎÔÏÊ«ÁªºÏ¹ú½²Êö·´ËÍÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11374963.htm">¸ê±Ú¶«£ººÎÔÏÊ«Á½´Î±»´ò¶Ï ÖÐ¹²Âùºá¾¡ÏÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372218.htm">ºÎÔÏÊ«ÁªºÏ¹úÑÝ½²·´ËÍÖÐ ºôÓõ½ô¼±±£»¤Ïã¸Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370428.htm">¸°ÁªºÏ¹úÑÝ½²·´ËÍÖÐ ºÎÔÏÊ«ÐÐÇ°¼ÄÓï´ßÈËÀáÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/30/n11355596.htm">×Å»Æ·çÒÂÁÁÏà½ðÇú½± ºÎÔÏÊ«Á¦Í¦Ïã¸Û·´ËÍÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/27/n11350291.htm">Ì¨¸ÛºÏ×÷¸èÇú¡¶³Å¡· ºÎÔÏÊ«£º»¥ÏàÖ§³ÖºÃÖØÒª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/14/n11321315.htm">ÈâÉí¶Ô¿¹Õò±©²¿¶Ó ºÎÔÏÊ«ÀíÐÔÌ¸ÅÐÓ°Æ¬·è´«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/13/n11318708.htm">ºÎÔÏÊ«¡¢»ÆÒ«Ã÷Í¦·´ËÍÖÐ FBÌùÎÄÍøÓÑ»ØÏìÈÈ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11283316.htm">ÊÜÑûÔÚ°ÂË¹Â½ÂÛÌ³ÑÝ½² ºÎÔÏÊ«£ºÎÒÃÇÊÇÏã¸ÛÈË</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374597.htm">ÖÐ¹²ÑÏ¿Ø¸Û¸®ÐÞÀýÊ§°ÜÏûÏ¢ ºúÎý½ø·¢ÌûÔâ·í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11375029.htm">¡¾·­Ç½±Ø¿´¡¿Ïã¸ÛÐÞÀýÍê°Ü ÖÐ¹²·âÉ±ÏûÏ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374568.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖØ´ó·ÖÆçÈÔ´æ ÃÀÖÐÍ¨»°Ì¸Ê²Ã´£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11375395.htm">ÃÀ¹úÇ°Íâ½»¹ÙÔÙ¾¯¸æÖÐ¹²£º±ðÎóÅÐÐÎÊÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229726.htm">¡¾ÏÍºó´«¡¿´ó½Å»Êºó±³×ÅÉËÖØÕÉ·òÌÓ³öÏÕ¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11354386.htm">ÊÍåÈÄ²ÄáÓëËûµÄ¼ÒÈË£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353576.htm">ÃüÔËÌì¶¨Âð£¿ÎºáçÊµ¼ÊÑéÖ¤ÈÃËû¾ªÌ¾£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/8/1/n4493541.htm">·çË®±¦µØ×¨ÕÒÊ²Ã´ÑùµÄÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370428.htm">¸°ÁªºÏ¹úÑÝ½²·´ËÍÖÐ ºÎÔÏÊ«ÐÐÇ°¼ÄÓï´ßÈËÀáÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11373803.htm">»Æ×ÓÙ®ÆØÌáÇ×¹ý³Ì ÃÏ¼Ò¾ÜÆ¸½ð¸ÄÊÕ°éÊÖÀñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370553.htm">¸æ±ðÑÝ³ª»áÈ÷ÀáÏÖ³¡ ·ÑÓñÇå£ºÀë±ðÄÑÒÔËµ³ö¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372496.htm">Ì·Ó½÷ëÖÓÕòÌÎ³Å¾¯ ÍøÓÑÓõÃÀ¹úÖØÉóÆäÑÝ³öÇ©Ö¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370167.htm">ÔÙ²Î¼Ó¾ÅÁú·´ËÍÖÐ´óÓÎÐÐ Ò¶µÂæµ£ºÏã¸Û³Å×¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374248.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£³Æ¡°ÐÞÀý¡±Ê§°Ü ÄÑ½âÀ§¾Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372403.htm">¡¾ÐÂÎÅ¿´µã¡¿°ÙÍò¸ÛÈË¿¹Õù ¶àÉÙ¹úÈË±»ÖÐ¹²ÆÛÂ÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/5/n11367010.htm">¡¾ÐÂÎÅ¿´µã¡¿É½ÓêÓûÀ´·çÂúÂ¥ Ïã¸Û¿¼Ñé±±¾©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372326.htm">¡¾ÐÂÎÅ¿´µã¡¿ÈýÏ¿´ó°Ó±äÐÎ£¿ÕæÕýÎ£»úÊÇÊ²Ã´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372291.htm">Ïã¸Û·´ËÍÖÐÐÂ¼Æ»®£ºÈ«Ãñµ½ÖÐ¹úÒøÐÐÈ¡Ç®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11371647.htm">µ¥ÈÕ´Ý»Ù23Á¾Ì¹¿Ë ÃÀ¾üA-10¹¥»÷»ú´´¼ÍÂ¼</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/27/n11283316.md#1">å—é‚€åœ¨å¥¥æ–¯é™†è®ºå›æ¼”è®² ä½•éŸµè¯—ï¼šæˆ‘ä»¬æ˜¯é¦™æ¸¯äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/6/13/n11318708.md#1">ä½•éŸµè¯—ã€é»„è€€æ˜ŽæŒºåé€ä¸­ FBè´´æ–‡ç½‘å‹å›žå“çƒ­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/6/14/n11321315.md#1">è‚‰èº«å¯¹æŠ—é•‡æš´éƒ¨é˜Ÿ ä½•éŸµè¯—ç†æ€§è°ˆåˆ¤å½±ç‰‡ç–¯ä¼ </a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/6/27/n11350291.md#1">å°æ¸¯åˆä½œæ­Œæ›²ã€Šæ’‘ã€‹ ä½•éŸµè¯—ï¼šäº’ç›¸æ”¯æŒå¥½é‡è¦</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/10/n11376683.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927236.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šæ–‡é©åˆåŒ—äº¬æ˜Œå¹³å’Œå¤§å…´åŽ¿å¤§å± æ€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11365941.md#1" target="_blank">ã€ä¸“è®¿ã€‘æ¾³å‚è®®å‘˜ï¼šåˆ¶è£ä¸­å…± ä¸åšè¿«å®³åŒè°‹</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731313.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘æ±½è½¦èŠ¯ç‰‡å‘Šæ€¥ ç¾Žæ—¥æ¬§å‘å°æ¹¾å‘¼æ•‘</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728803.md#1">ã€æ—¶äº‹å†›äº‹ã€‘ä»¥è‰²åˆ—è­¦å‘Šç¾Ž æ”¾å®½ä¼Šæœ—åˆ¶è£å³å®£æˆ˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731466.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç­‰ä¸åˆ°æ‹œç™»ç”µè¯ ä¹ è¿‘å¹³ç€æ€¥å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726294.md#1">ä¸­åŒ»å¸ˆç”¨2ç§æ°´æžœå¹²ç…®æ°´å– å…»èƒƒã€æ”¹å–„è„‚è‚ªè‚</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/10/n11376683.htm">è”åˆå›½æ¼”è®²åŽè¿”æ¸¯ ä½•éŸµè¯—IGæ™’æ¸©æš–å¿ƒæ„å¡</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/7/10/n11376683.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
